escalamientoDebil/resultados/slurm/volta_2753_1.err
  File "/home/cpenav/Documents/ProyectoFinal/IntroHPC_MFEM/escalamientoDebil/plot.py", line 63
    plt.xlim(git 0, len(threadsArray)+0.2)
                 ^
SyntaxError: invalid syntax
